Make memory defaults configurable in distribution
The hard-coded defaults for maximum heap and metaspace size can now be
overridden in a daemon.properties file that is read from the
installation’s home directory.

Resolves #7673.